<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray_1"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".models.gasoline.GasolineRecordEditActivity">

    <com.hugh.teatime.view.TitlebarView
        android:id="@+id/tbv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleName="@string/title_add_record" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/page_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:layout_marginTop="@dimen/page_margin">

                <TextView
                    android:layout_width="@dimen/txt_key_width"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/margin_divider_width"
                    android:background="@color/colorGreen"
                    android:gravity="center"
                    android:text="@string/gasoline_total_amount"
                    android:textColor="@color/colorWhite" />

                <EditText
                    android:id="@+id/et_total_amount"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    android:hint="@string/gasoline_amount_hint"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:padding="10dp"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="@dimen/txt_unit_width"
                    android:layout_height="match_parent"
                    android:background="@color/colorGreen"
                    android:gravity="center"
                    android:text="@string/gasoline_amount_unit"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:layout_marginTop="@dimen/page_margin">

                <TextView
                    android:layout_width="@dimen/txt_key_width"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/margin_divider_width"
                    android:background="@color/colorGreen"
                    android:gravity="center"
                    android:text="@string/gasoline_total_mileage"
                    android:textColor="@color/colorWhite" />

                <EditText
                    android:id="@+id/et_total_mileage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    android:hint="@string/gasoline_mileage_hint"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:padding="10dp"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="@dimen/txt_unit_width"
                    android:layout_height="match_parent"
                    android:background="@color/colorGreen"
                    android:gravity="center"
                    android:text="@string/gasoline_mileage_unit"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:layout_marginTop="@dimen/page_margin">

                <TextView
                    android:layout_width="@dimen/txt_key_width"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/margin_divider_width"
                    android:background="@color/colorGreen"
                    android:gravity="center"
                    android:text="@string/gasoline_total_quantity"
                    android:textColor="@color/colorWhite" />

                <EditText
                    android:id="@+id/et_total_quantity"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    android:hint="@string/gasoline_quantity_hint"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:padding="10dp"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="@dimen/txt_unit_width"
                    android:layout_height="match_parent"
                    android:background="@color/colorGreen"
                    android:gravity="center"
                    android:text="@string/gasoline_quantity_unit"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:layout_marginTop="@dimen/page_margin">

                <TextView
                    android:layout_width="@dimen/txt_key_width"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/margin_divider_width"
                    android:background="@color/colorGreen"
                    android:gravity="center"
                    android:text="@string/gasoline_type"
                    android:textColor="@color/colorWhite" />

                <Spinner
                    android:id="@+id/s_gasoline_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:layout_marginTop="@dimen/page_margin">

                <TextView
                    android:layout_width="@dimen/txt_key_width"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/margin_divider_width"
                    android:background="@color/colorGreen"
                    android:gravity="center"
                    android:text="@string/gasoline_pay_type"
                    android:textColor="@color/colorWhite" />

                <Spinner
                    android:id="@+id/s_pay_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:layout_marginTop="@dimen/page_margin">

                <TextView
                    android:layout_width="@dimen/txt_key_width"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/margin_divider_width"
                    android:background="@color/colorGreen"
                    android:gravity="center"
                    android:text="@string/gasoline_car_no"
                    android:textColor="@color/colorWhite" />

                <EditText
                    android:id="@+id/et_car_no"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorWhite"
                    android:hint="@string/gasoline_car_no_hint"
                    android:inputType="textNoSuggestions"
                    android:maxLength="10"
                    android:padding="10dp"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:layout_marginTop="@dimen/page_margin">

                <TextView
                    android:layout_width="@dimen/txt_key_width"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/margin_divider_width"
                    android:background="@color/colorGreen"
                    android:gravity="center"
                    android:text="@string/gasoline_record_date"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/btn_record_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_click_bg_selector"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/high_item_height"
                android:layout_marginTop="@dimen/page_margin">

                <TextView
                    android:layout_width="@dimen/txt_key_width"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/margin_divider_width"
                    android:background="@color/colorGreen"
                    android:gravity="center"
                    android:text="@string/gasoline_record_comment"
                    android:textColor="@color/colorWhite" />

                <EditText
                    android:id="@+id/et_record_comment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorWhite"
                    android:gravity="start|top"
                    android:hint="@string/bill_record_comment_hint"
                    android:inputType="textMultiLine"
                    android:padding="@dimen/edit_padding"
                    android:singleLine="false" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/cb_is_invoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/page_margin"
                android:button="@drawable/cb_check_bg"
                android:checked="true"
                android:gravity="center_vertical"
                android:text="@string/gasoline_is_invoice"
                android:textColor="@color/colorGreen" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:layout_marginTop="@dimen/page_margin"
                android:background="@drawable/btn_click_bg_selector"
                android:text="@string/confirm"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>